--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Poppins", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   line-height: 1.5;
   font-weight: 400;
 
